--- a/client/my-app/package.json
+++ b/client/my-app/package.json
@@ -8,6 +8,7 @@
     "popper.js": "^1.14.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-media": "^1.8.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
@@ -39,9 +40,11 @@
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.5.0",
+    "node-sass": "^4.10.0",
     "react-hot-loader": "^4.3.12",
     "react-svg-loader": "^2.1.0",
-    "webpack": "^4.24.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
